# accessible-pygments

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  RELEASE.md  pyproject.toml  result.html  setup.py
.github/workflows/: preview-pr.yml  pypi-package.yml
a11-pygments/: a11-light.py
a11_pygments/: a11_dark.py  a11_light.py
a11y_pygments/: __init__.py  a11y_dark.py  a11y_light.py
a11y_pygments/a11y_dark/: README.md  a11y_dark.py  style.py
a11y_pygments/a11y_high_contrast_dark/: README.md  style.css  style.py
a11y_pygments/a11y_high_contrast_light/: README.md  a11y_high_contrast_light.py  style.css  style.py
a11y_pygments/a11y_light/: README.md  style.css  style.py
a11y_pygments/blinds_dark/: README.md  style.css  style.py
a11y_pygments/blinds_light/: README.md  style.css  style.py
a11y_pygments/github_dark/: README.md  style.css  style.py
a11y_pygments/github_dark_colorblind/: README.md  style.css  style.py
a11y_pygments/github_dark_high_contrast/: README.md  style.css  style.py
a11y_pygments/github_light/: README.md  style.css  style.py
a11y_pygments/github_light_colorblind/: README.md  style.css  style.py
a11y_pygments/github_light_high_contrast/: README.md  style.css  style.py
a11y_pygments/gotthard_dark/: README.md  style.css  style.py
a11y_pygments/gotthard_light/: README.md  style.css  style.py
a11y_pygments/greative/: README.md  style.css  style.py
a11y_pygments/pitaya_smoothie/: README.md  pitaya_smoothie.py  style.css  style.py
a11y_pygments/utils/: generate_css.py  utils.py  wcag_contrast.py
docs/: generate_css.py  index.css  index.html  index.js
docs/css/: a11y_dark-style.css  a11y_high_contrast_light-style.css  a11y_light-style.css  blinds_light-style.css  github_dark-style.css  github_dark_colorblind-style.css  github_dark_high_contrast-style.css  github_light-style.css  github_light_high_contrast-style.css  gotthard_dark-style.css  gotthard_light-style.css  greative-style.css  pitaya_smoothie-style.css
pr-preview/pr-27/css/: github_dark-style.css
pr-preview/pr-29/css/: github_dark-style.css
pr-preview/pr-33/css/: a11y_high_contrast_light-style.css  a11y_light-style.css
pr-preview/pr-39/css/: pitaya_smoothie-style.css
pr-preview/pr-41/: all_themes.pptx
pr-preview/pr-42/css/: a11y_high_contrast_dark-style.css
pr-preview/pr-43/css/: a11y_high_contrast_light-style.css
pr-preview/pr-45/: index.html
pr-preview/pr-45/css/: github_light_high_contrast-style.css
pr-preview/pr-46/css/: a11y_light-style.css
pr-preview/pr-48/css/: github_dark_high_contrast-style.css
pr-preview/pr-55/css/: a11y_light-style.css
pr-preview/pr-56/css/: a11y_high_contrast_light-style.css  github_dark_colorblind-style.css  github_light_colorblind-style.css  gotthard_dark-style.css
pr-preview/pr-58/css/: a11y_light-style.css
pr-preview/pr-61/css/: gotthard_light-style.css
pr-preview/pr-62/css/: blinds_dark-style.css
pr-preview/pr-63/css/: greative-style.css
pr-preview/pr-64/css/: github_light-style.css
pr-preview/pr-66/css/: a11y_dark-style.css  github_dark-style.css
pr-preview/pr-67/css/: blinds_light-style.css
pr-preview/pr-68/css/: a11y_dark-style.css
pr-preview/pr-70/css/: a11y_light-style.css  gotthard_dark-style.css  greative-style.css
pr-preview/pr-71/css/: a11y_high_contrast_light-style.css  blinds_dark-style.css  github_light-style.css  github_light_high_contrast-style.css  pitaya_smoothie-style.css
pr-preview/pr-75/: index.html
pr-preview/pr-75/css/: a11y_high_contrast_dark-style.css  github_dark-style.css  github_dark_colorblind-style.css
pr-preview/pr-77/css/: blinds_light-style.css  github_dark_high_contrast-style.css  github_light_colorblind-style.css
scripts/: update_readme_for_theme.py  update_theme_docs.py
scripts/templates/: README.md  theme_readme.md
templates/: index_template.html
templates/new-theme/: README.md  style.py
test/: demo.css  index.html  render_html.py  run_css.py  run_tests.py  test.py  test_a11_dark.py  test_a11_light.py  test_contrast.py
test/html-files/a11y-dark/: bash.html  css.html  html.html  js.html  md.html  py.html
test/html-files/a11y-high-contrast-dark/: bash.html  css.html  html.html  js.html  md.html  py.html
test/html-files/a11y-high-contrast-light/: bash.html  css.html  html.html  js.html  md.html  py.html
test/html-files/a11y-light/: bash.html  css.html  html.html  js.html  md.html  py.html
test/html-files/blinds-dark/: bash.html  css.html  html.html  js.html  md.html  py.html
test/html-files/blinds-light/: bash.html  css.html  html.html  js.html  md.html  py.html
test/html-files/github-dark/: bash.html  css.html  html.html  js.html  md.html  py.html
test/html-files/github-dark-colorblind/: bash.html  css.html  html.html  js.html  md.html  py.html
test/html-files/github-dark-high-contrast/: bash.html  css.html  html.html  js.html  md.html  py.html
test/html-files/github-light/: bash.html  css.html  html.html  js.html  md.html  py.html
test/html-files/github-light-colorblind/: bash.html  css.html  html.html  js.html  md.html  py.html
test/html-files/github-light-high-contrast/: bash.html  css.html  html.html  js.html  md.html  py.html
test/html-files/gotthard-dark/: bash.html  css.html  html.html  js.html  md.html  py.html
test/html-files/gotthard-light/: bash.html  css.html  html.html  js.html  md.html  py.html
test/results/: a11y-dark-high-contrast-css.html  a11y-dark-high-contrast-js.html  a11y-dark-high-contrast-py.html  a11y-dark-html.html  a11y-dark-md.html  a11y-light-bash.html  a11y-light-css.html  a11y-light-high-contrast-bash.html  a11y-light-high-contrast-css.html  a11y-light-high-contrast-html.html  a11y-light-high-contrast-py.html  a11y-light-html.html  a11y-light-js.html  a11y-light-md.html  a11y-light-py.html
test/scripts/: test.bash  test.css  test.html  test.js
tests/: render_html.py  run_css.py
tests/scripts/: test.css  test.js  test.py
tools/: render_html.py  run_css.py  update_index.py
tools/sample-scripts/: test.css  test.html  test.js  test.py
(+174 files in other folders)
